# log_analizor

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
assets/: ui.css
src/: analyzer.rs  config.rs  context7.rs  domain.rs  lib.rs  main.rs  sample_logs.rs  tools.rs
src/app/: error.rs  events.rs  input.rs  mod.rs  runner.rs
src/domain/: mod.rs  normalize.rs  tests.rs
src/tools/: args.rs  classify_incident.rs  context7_enrichment.rs  mod.rs  parse_log.rs  suggest_fix.rs
