[package]
name = "log_analizor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "=1.51.0", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
dotenvy = "=0.15.7"
reqwest = { version = "=0.12.28", features = ["json", "rustls-tls"], default-features = false }
rig-core = { version = "=0.34.0", features = ["derive"] }
futures = "=0.3.32"
dioxus = { version = "=0.6.3", features = ["desktop"], optional = true }

[features]
default = []
ui = ["dep:dioxus"]

[[bin]]
name = "log_analizor"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "ui"
path = "src/bin/ui/main.rs"
required-features = ["ui"]
